--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mocha": "^5.2.7",
     "@types/sinon": "^7.0.12",
     "chai": "^4.2.0",
+    "js-yaml": "^4.0.0",
     "mocha": "^6.1.4",
     "sinon": "^7.3.2"
   }
