--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,23 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
+commands:
+  print_pipeline_id:
+    description: "A very simple command to print pipeline Id."
+    parameters:
+      my_param:
+        type: string
+        default: "xiaosha test param!!"
+    steps:
+      - run: echo << parameters.my_param >>
+      - run: echo $CIRCLE_WORKFLOW_ID
 jobs:
+  test_command:
+    docker:
+      - image: cimg/base:2020.01
+    steps:
+      - print_pipeline_id:
+          my_param: "xing test param!!"
   save_hello_world_output:
     docker:
       - image: cimg/base:2020.01
@@ -24,7 +40,7 @@ jobs:
           at: ~/
       - run: cat ~/output.txt
       - run: ls /
-  show_env_var:
+  test_env_var:
     docker:
       - image: cimg/base:2020.01
     steps:
@@ -42,7 +58,8 @@ workflows:
           requires:
             - save_hello_world_output
   # Name the workflow "welcome"
-  test_env_var:
+  test_playground:
     # Run the welcome/run job in its own container
     jobs:
-      - show_env_var
+      - test_env_var
+      - test_command
