--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pretest": "rm -rf lib && tsc",
+    "build": "rm -rf lib && tsc",
     "test": "yarn mocha lib/test/*.js"
   },
   "keywords": [],
@@ -18,5 +18,8 @@
     "js-yaml": "^4.0.0",
     "mocha": "^6.1.4",
     "sinon": "^7.3.2"
+  },
+  "dependencies": {
+    "typescript": "^4.1.3"
   }
 }
